# Piano

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  recording.mkv
src/: main.cpp
